[gd_scene load_steps=7 format=3 uid="uid://cmjndycxmndy1"]

[ext_resource type="Script" path="res://src/fishing_lvl/chest.gd" id="1_ih0yb"]
[ext_resource type="Script" path="res://src/fishing_lvl/chest_progress.gd" id="2_b1yqj"]
[ext_resource type="Texture2D" uid="uid://bfqpgrqixy64o" path="res://assets/Treasure_Chest.png" id="2_uteaq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xq7m3"]
size = Vector2(26, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yncc"]
bg_color = Color(0.423529, 0.227451, 0.117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6rnb"]
bg_color = Color(0.176471, 0.631373, 0.215686, 1)

[node name="Chest" type="Area2D" node_paths=PackedStringArray("chest_progress")]
position = Vector2(-17, 18)
script = ExtResource("1_ih0yb")
chest_progress = NodePath("ChestProgress")

[node name="TreasureChestSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0.75, 0.25)
scale = Vector2(0.0637019, 0.0637019)
texture = ExtResource("2_uteaq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xq7m3")

[node name="ChestProgress" type="ProgressBar" parent="." node_paths=PackedStringArray("chest")]
offset_left = -15.0
offset_top = 11.0
offset_right = 15.0
offset_bottom = 18.0
theme_override_styles/background = SubResource("StyleBoxFlat_6yncc")
theme_override_styles/fill = SubResource("StyleBoxFlat_u6rnb")
show_percentage = false
script = ExtResource("2_b1yqj")
chest = NodePath("..")
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
